# ctf-kit

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  LICENSE  Makefile  QUALITY_SETUP.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
.claude/commands/: ctf-analyze.md  ctf-crypto.md  ctf-flag.md  ctf-forensics.md  ctf-here.md  ctf-misc.md  ctf-osint.md  ctf-pwn.md  ctf-reverse.md  ctf-status.md  ctf-stego.md  ctf-web.md
.github/workflows/: ci.yml
agents/claude/commands/: ctf-analyze.md  ctf-crypto.md  ctf-forensics.md  ctf-pwn.md  ctf-reverse.md  ctf-stego.md  ctf-web.md
docs/plan/: ctf-kit-competition-workflow.md  ctf-kit-project-plan.md  ctf-kit-skills-analysis.md  ctf-kit-tool-integrations.md
skills/_lib/: parse-binwalk.py  parse-checksec.py  parse-exiftool.py  parse-hashid.py  parse-helpers.sh  parse-steghide.py  parse-strings.py  parse-xortool.py  parse-zsteg.py
skills/analyze/: SKILL.md
skills/analyze/references/: tools.md
skills/analyze/scripts/: check-tools.sh  run-strings.sh  triage.sh
skills/crypto/: SKILL.md
skills/crypto/references/: patterns.md  tools.md
skills/crypto/scripts/: check-tools.sh  identify-hash.sh  run-xortool.sh
skills/flag/: SKILL.md
skills/flag/scripts/: check-tools.sh
skills/forensics/: SKILL.md
skills/forensics/references/: tools.md
skills/forensics/scripts/: check-tools.sh  extract-and-analyze.sh  run-binwalk.sh  run-tshark.sh  run-volatility.sh
skills/here/: SKILL.md
skills/here/scripts/: check-tools.sh
skills/misc/: SKILL.md
skills/misc/references/: patterns.md  tools.md
skills/misc/scripts/: check-tools.sh  run-decode.sh
skills/osint/: SKILL.md
skills/osint/references/: patterns.md  tools.md
skills/osint/scripts/: check-tools.sh  run-exiftool.sh  run-sherlock.sh
skills/pwn/: SKILL.md
skills/pwn/references/: patterns.md  tools.md
skills/pwn/scripts/: check-tools.sh  run-checksec.sh
skills/reverse/: SKILL.md
skills/reverse/references/: patterns.md  tools.md
skills/reverse/scripts/: check-tools.sh  run-radare2.sh
skills/status/: SKILL.md
skills/status/scripts/: check-tools.sh
skills/stego/: SKILL.md
skills/stego/references/: patterns.md  tools.md
skills/stego/scripts/: check-tools.sh  run-exiftool.sh  run-steghide.sh  run-zsteg.sh  stego-pipeline.sh
skills/web/: SKILL.md
skills/web/references/: patterns.md  tools.md
skills/web/scripts/: check-tools.sh  run-gobuster.sh
src/ctf_kit/: __init__.py  cli.py  competition.py  config.py
src/ctf_kit/commands/: __init__.py  analyze.py  check.py  competition.py  flag.py  here.py  init.py  run.py  status.py  writeup.py
src/ctf_kit/integrations/: __init__.py  base.py
src/ctf_kit/integrations/archive/: __init__.py  bkcrack.py
src/ctf_kit/integrations/basic/: __init__.py  file_tool.py  strings_tool.py
src/ctf_kit/integrations/crypto/: __init__.py  hashcat.py  hashid.py  john.py  rsactftool.py  xortool.py
src/ctf_kit/integrations/encoding/: __init__.py  cyberchef.py
src/ctf_kit/integrations/forensics/: __init__.py  binwalk.py  foremost.py  tshark.py  volatility.py
src/ctf_kit/integrations/misc/: __init__.py  qrencode.py  zbarimg.py
src/ctf_kit/integrations/osint/: __init__.py  dig.py  sherlock.py  shodan_tool.py  theharvester.py  whois.py
src/ctf_kit/integrations/pwn/: __init__.py  checksec.py  pwntools_wrapper.py  ropgadget.py
src/ctf_kit/integrations/reversing/: __init__.py  ghidra.py  radare2.py
src/ctf_kit/integrations/stego/: __init__.py  exiftool.py  steghide.py  zsteg.py
src/ctf_kit/integrations/web/: __init__.py  ffuf.py  gobuster.py  nikto.py  sqlmap.py
src/ctf_kit/skills/: __init__.py  analyze.py  base.py  crypto.py  forensics.py  misc.py  osint.py  pwn.py  reversing.py  stego.py  web.py
src/ctf_kit/utils/: __init__.py  file_detection.py
tests/: conftest.py  test_analyze.py  test_archive_tools.py  test_basic.py  test_challenge_integration.py  test_commands_ext.py  test_competition.py  test_competition_commands.py  test_crypto_tools.py  test_encoding_tools.py  test_file_detection.py  test_forensics_tools.py  test_integration_ext.py  test_misc_tools.py  test_osint_tools.py  test_pwn_tools.py  test_skill_functional.py  test_skill_parsers.py  test_skill_performance.py  test_skill_triggers.py  test_skills.py  test_skills_ext.py  test_stego_tools.py  test_tools.py  test_web_tools.py
tests/fixtures/challenges/: SOLUTIONS.md  crypto_base64.txt  crypto_rsa.txt  crypto_rsa_challenge.txt  forensics_network.pcap  misc_encoding.txt  misc_multi_encode.txt  osint_profile.txt  pwn_overflow.c  pwn_vulnerable  web_flask.py  web_flask_vuln.py  web_vuln.php
